--- a/trunk/keys3.dtx
+++ b/trunk/keys3.dtx
@@ -751,9 +751,9 @@ This work consists of the file  keys3.dtx
 %   available, copies the default into \cs{l_keys_current_value_toks}.
 % \end{function}
 % 
-% \begin{function}{\keys_err_new:nNnnn}
+% \begin{function}{\keys_err_new:nNpnn}
 %   \begin{syntax}
-%     "\keys_err_new:nNnnn" <name> <args> <short> <long> <code>
+%     "\keys_err_new:nNpnn" <name> <args> <short> <long> <code>
 %   \end{syntax}
 %   Creates error with <name> and taking <args> arguments, with
 %   <short> description followed by <long>, and recovery <code>.
@@ -1707,12 +1707,12 @@ This work consists of the file  keys3.dtx
 % defined separately. To make life a little easier here, some custom
 % functions are used to keep repetition down.
 % 
-%\begin{macro}{\keys_err_new:nNnnn}
+%\begin{macro}{\keys_err_new:nNpnn}
 % To create new error messages, a utility function is created.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \keys_err_new:nNnnn #1 {
+\cs_new_nopar:Npn \keys_err_new:nNpnn #1 {
   \tlp_new:cn { l_keys_err_#1_tlp } {#1}
-  \exp_args:NNc \err_interrupt_new:NNNnnn \c_keys_err_tlp
+  \exp_args:NNc \err_interrupt_new:NNpnnn \c_keys_err_tlp
     { l_keys_err_#1_tlp } 
 }
 %    \end{macrocode}
@@ -1730,25 +1730,25 @@ This work consists of the file  keys3.dtx
 % the file.
 %    \begin{macrocode}
 \err_file_new:Nn \c_keys_err_tlp { keys3.err }
-\keys_err_new:nNnnn { unknown_key } 1
+\keys_err_new:nNpnn { unknown_key } #1
   { The~key~`#1'~is~unknown~and~is~being~ignored }
   { \err_help_return_or_X: } { }
-\keys_err_new:nNnnn { value_required } 1
+\keys_err_new:nNpnn { value_required } #1
   { The~key~`#1'~requires~a~value~and~is~being~ignored }
   { \err_help_return_or_X: } { }
-\keys_err_new:nNnnn { value_forbidden } 2
+\keys_err_new:nNpnn { value_forbidden } #1#2
   { The~key~`#1'~cannot~taken~a~value:~the~given~input~\iow_newline:
     ~\text_put_sp:~\text_put_sp:`#2'~is~being~ignored }
   { \err_help_return_or_X: } { }
-\keys_err_new:nNnnn { boolean_expected } 2
+\keys_err_new:nNpnn { boolean_expected } #1#2
   { Key~`#1'~takes~the~Boolean~values~`true'~and~\iow_newline:~
    \text_put_sp:~\text_put_sp:`false'~only.~The~given~value~`#2'~is~
    being~ignored }
   { \err_help_return_or_X: } { }
-\keys_err_new:nNnnn { not_boolean } 1
+\keys_err_new:nNpnn { not_boolean } #1
   { Key~`#1'~is~not~a~Boolean~key:~you~cannot~create~a~complement }
   { \err_help_return_or_X: } { }
-\keys_err_new:nNnnn { unknown_choice } 2
+\keys_err_new:nNpnn { unknown_choice } #1#2
   { Choice~`#2'~unknown~for~key~`#1':~\iow_newline:~\text_put_sp:~
    \text_put_sp:~the~key~is~being~ignored }
   { \err_help_return_or_X: } { }
